# open-whisper

./: .env.example  .gitignore  Package.swift  README.md  pyproject.toml
Sources/OpenWhisperApp/: ASRClient.swift  AppDelegate.swift  AppSettings.swift  AudioRecorder.swift  BackendProcess.swift  FunctionKeyMonitor.swift  MicrophoneManager.swift  OpenWhisperController.swift  OpenWhisperHUD.swift  Permissions.swift  SettingsWindowController.swift  TextInjector.swift
scripts/: codesign-create.sh  codesign-remove.sh  dictation.sh
src/: config.py  main.py
src/asr/: __init__.py  dependencies.py  providers.py  router.py  schemas.py  service.py
src/postprocess/: __init__.py  apple_transcript_cleaner.py  lmstudio_transcript_cleaner.py
