[project]
name = "open-whisper"
version = "0.1.0"
description = "Open Whisper is a tool for transcribing voice into any input box you want."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "mlx-audio>=0.3.1",
    "huggingface_hub[hf_xet]>=0.24.0",
]
